# resolve_bufr_sequence

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  reg.txt  resolve_bufr_sequence.py
.github/workflows/: lint.yaml
resolve_bufr_sequence/: __init__.py  resolve_bufr_sequence.py
src/resolve_bufr_sequence/: __init__.py  config.py  formatter.py  io_utils.py  resolve_bufr_sequence.py
src/resolve_bufr_sequence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_all.py
